# Insight_World

./: Cargo.toml  README.md
assets/: silva_main_char.glb
assets/default/parasol/: scene.gltf
assets/default_characters/: dance.glb  flip_punch.glb  idle_breathing.glb  injured.glb  jump_attack.glb  running.glb  straight_punch.glb  two_hands_spell.glb
assets/default_gltfs/: soccer_ball.glb
assets/mixamo/: Shoot_Forward.glb  Walking.fbx  blender_walk.glb  fly_back_death.glb  from_blender.glb  step_forward.glb
assets/nature/heaven/: license.txt
assets/nature/parasol/: license.txt
assets/nature/the_palace_at_knossos_after_midnight/: license.txt  scene.gltf
assets/test/: pool_ball.glb
assets/worlds/: demo_moves.txt  experiment_world.txt
src/: main.rs  todo.txt
src/animation/: animation_helper.rs  mod.rs  play.rs
src/blockchain/: block.rs  mod.rs  transactions.rs
src/camera/: follow_me.rs  mod.rs
src/colliders/: collider.rs
src/components/: comps.rs  mod.rs
src/crates/rapier/bevy_rapier2d/: Cargo.toml
src/crates/rapier/bevy_rapier3d/: Cargo.toml
src/default_plane/: create_default.rs
src/default_world/: create_default.rs  menu.rs  mod.rs
src/demo_game/: demo.rs  mod.rs  send.rs
src/demo_verify/: main.rs
src/demo_verify/verify/: camera.rs  checksum.rs  mod.rs  movement.rs  play.rs  player.rs  recreate.rs  win.rs
src/ggrs_rollback/: follow_camera.rs  ggrs_camera.rs  mod.rs  network.rs
src/gltf/: imported.rs  mod.rs  todo.txt
src/networks/: main.rs  mod.rs  questions.txt  structs.rs
src/networks/behavior/: identify.rs  kademlia.rs  mdns.rs  mod.rs  my_behavior.rs  protocol.rs  relay.rs
src/networks/connection/: mod.rs  peers.rs  swarm.rs  transport.rs
src/plane_creator/: functions.txt  main.rs  mod.rs  problems.txt
src/plane_creator/asset_server/: detect_changes.rs  mod.rs
src/plane_creator/camera/: mod.rs  pan_orbit.rs
src/plane_creator/db/: assets.rs  db_assets.rs  mod.rs
src/plane_creator/geometry/: bevy_ui.rs  mod.rs  model_to_world.rs  my_plane.rs  size.rs  ui.rs
src/plane_creator/save/: mod.rs  save.rs  save_world.rs
src/players/: display.rs  fight.rs  info.rs  interact.rs  mod.rs  movement.rs  physics.rs  todo.txt
src/systems/: abilities.rs  framework.rs  mod.rs
src/systems_creator/: main.rs
src/systems_creator/player_models/: spawn.rs
src/worlds/: create_insight.rs  mod.rs  player.rs  world_manager.rs
